--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
             "aot": true,
             "assets": [
               "apps/pwa-table-pagination/src/favicon.ico",
-              "apps/pwa-table-pagination/src/assets"
+              "apps/pwa-table-pagination/src/assets",
+              "apps/pwa-table-pagination/src/manifest.webmanifest"
             ],
             "styles": [
               "apps/pwa-table-pagination/src/styles.scss"
@@ -57,7 +58,9 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "apps/pwa-table-pagination/ngsw-config.json"
             }
           }
         },
