--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "apps/pwa-table-pagination/src/manifest.webmanifest"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "apps/pwa-table-pagination/src/styles.scss"
             ],
             "scripts": []
