--- a/package.json
+++ b/package.json
@@ -31,19 +31,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.1.0",
+    "@angular/cdk": "^10.2.4",
     "@angular/common": "^10.1.0",
     "@angular/compiler": "^10.1.0",
     "@angular/core": "^10.1.0",
     "@angular/fire": "^6.0.3",
     "@angular/forms": "^10.1.0",
+    "@angular/material": "^10.2.4",
     "@angular/platform-browser": "^10.1.0",
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
     "@angular/service-worker": "^10.1.0",
     "@nrwl/angular": "10.3.0",
+    "firebase": "^7.13.1",
     "rxjs": "~6.5.5",
-    "zone.js": "^0.10.2",
-    "firebase": "^7.13.1"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1100",
